--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@tailwindcss/vite": "^4.1.17",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.17",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
