refactor: reorganize ferry search form and type definitions
- Extracted ferry search form into dedicated FerrySearchForm component for better separation of concerns
- Consolidated component prop interfaces into shared/interfaces for reusability
- Added dayjs dependency and configured Yup validation setup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "dayjs": "^1.11.19",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.17",
     "vee-validate": "^4.15.1",
